Add QA scripts, SSE chat stream & session tools
Add developer QA tooling and major backend/frontend feature work: new .claude launch config and multiple PowerShell QA scripts (date-controls, permissions, session-types, visual-setup) plus scripts/run-qa.ps1; remove stale scheduled_tasks.lock. In admin-ai-service introduce a streaming /chat/stream SSE endpoint (dedicated executor), add ChatEventSink interface and extend AdminAiService.chat to accept an event sink and emit status/text/done/error events so UIs can receive live progress. Broader changes include many new/updated DTOs, controllers and services across candidature-, notification-, programme- and auth-services (session presets, parcours templates, candidature selection, contacts/invitations, permissions), plus corresponding frontend pages/components/hooks, middleware and docker-compose updates to support these features.